- TW-99 info report streamlining.
- TW-100 lazy dates (thanks to John Florian).
- TW-101 New description column format: Truncated WITH annotation count (thanks
         to atomicules).
- TW-105 Doc needed - a comprehensive 'setup' walkthrough.
- TW-115 allow "0day" durations for UDAs.
- TW-128 new helper command; _envs.
- TW-139 Possibility to execute shadow file generation (thanks to Arnoud K).
- TW-168 modification of due date relative to current due date (thanks to Dirk
         Sarpe).
- TW-186 Increase for numerical UDAs (thanks to Steffen Uhlig).
- TW-193 Support listing breaks.
- TW-197 New virtual tag READY.
- TW-218 Reveal terms of urgency calculation for a given task (thanks to Max
         Muller).
- TW-221 Migrate task-faq man page to the Wiki.
- TW-230 Filter tasks on partial UUIDs (thanks to Paul Kishimoto).
- TW-241 new column format; recur.short.
- TW-242 extra Space when annotating a path/filename, taskopen can not open the
         file (thanks to Andreas Kalex).
- TW-244 task add "Description (Information)" results in
         "Description ( Information)".
- TW-248 Substitute text doesn't work with forward slash (thanks to Jostein
         Berntsen).
- TW-249 Report filters don't allow parantheses (thanks to Philipp Woelfel).
- TW-250 Opening parenthesis in description gets padded in task 2.0.0 bet 2
         (thanks to Michelle Crane).
- TW-251 extra spaces added after ( and / (thanks to Andy Spiegl).
- TW-252 task done - Doesn't stop task before marking complete (thanks to
         Renato Alves).
- TW-253 Unrecognized taskwarrior file format. in
         /Users/user/Dropbox/.task/completed.data at line 1 (thanks to Kosta
         Harlan).
- TW-255 'Mask' instead of 'iMask' shown in info report (thanks to Benjamin
         Weber)
- TW-256 Holidays not displayed for some locales (thanks to Leon Feng).
- TW-257 limit: not working properly (thanks to Aikido Guy).
- TW-259 Hyphenated words are split when added (thanks to Ben Boeckel).